<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/nome_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nome"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fone_Id"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Fone" />

        <TextView
            android:id="@+id/emissao_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Emissao"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dt_VCTO_ID"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DT_VCTO" />

        <TextView
            android:id="@+id/valor_PGTO_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Valor_PGTO"
            android:textAlignment="textEnd"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/valor_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Valor"
        android:textStyle="bold" />

</LinearLayout>